<resources>
    <string name="app_name">Hackaton app</string>
    <string name="add_note_add_with_camera">Добавить с помощью камеры</string>
    <string name="add_note_top_pressure_hint">Систолическое давление (sys)</string>
    <string name="add_note_bottom_pressure_hint">Диастолическое давление (dia)</string>
    <string name="add_note_save">Сохранить</string>
    <string name="add_note_pulse_hint">Пульс</string>
    <string name="add_note_comments">Комментарии</string>

    <string-array name="patient_activity_entries">
        <item>Ничего не выбрано</item>
        <item>Подъем на этаж</item>
        <item>Бег</item>
        <item>Прогулка</item>
        <item>Другое</item>
    </string-array>

    <string name="patient_data_list_pressure">%1$d/%2$d мм р. ст.</string>
    <string name="patient_data_list_pulse">%1$d уд./мин</string>
    <string name="patient_note_search">Поиск</string>
    <string name="something_went_wrong">Что-то пошло не так</string>

    <string name="register">Зарегистрируйтесь!:)</string>
    <string name="sign_in">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="still_no_account">Еще нет аккаунта? :(</string>
    <string name="snils">Снилс</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="notes">Дневник</string>
    <string name="talking_with_doctor">Общение с врачом</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="when_we_send_notifications">Каждый день в %1$s мы будем присылать вам уведомления!</string>
    <string name="exit">Выйти из аккаунта</string>

    <string name="password_length_error_message">Пароль должен содержать более 6 символов</string>
    <string name="all_fields_should_be_filled_error_message">Все поля должны быть заполнены</string>
    <string name="sign_up_registration_title">Регистрация</string>
    <string name="sign_up_hint_login">Логин</string>
    <string name="camera_instruction">Наведите телефон так, \nчтобы данные тонометра попали в рамочку.\nДержите устройство под прямым углом</string>
    <string name="settings_receive_notifications">Получать уведомления</string>
</resources>